--- a/examples/ethernet/iperf/CMakeLists.txt
+++ b/examples/ethernet/iperf/CMakeLists.txt
@@ -3,7 +3,8 @@
 cmake_minimum_required(VERSION 3.5)
 
 set(EXTRA_COMPONENT_DIRS $ENV{IDF_PATH}/examples/system/console/advanced/components
-                         $ENV{IDF_PATH}/examples/common_components/iperf)
+                         $ENV{IDF_PATH}/examples/common_components/iperf
+                         $ENV{IDF_PATH}/examples/ethernet/enc28j60/components/eth_enc28j60)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(ethernet_iperf)
