--- a/examples/ethernet/iperf/Makefile
+++ b/examples/ethernet/iperf/Makefile
@@ -7,6 +7,7 @@ PROJECT_NAME := ethernet_iperf
 
 EXTRA_COMPONENT_DIRS = $(IDF_PATH)/examples/system/console/advanced/components
 EXTRA_COMPONENT_DIRS += $(IDF_PATH)/examples/wifi/iperf/components
+EXTRA_COMPONENT_DIRS += $(IDF_PATH)/examples/common_components/iperf
 
 
 include $(IDF_PATH)/make/project.mk
