--- a/examples/wifi/iperf/Makefile
+++ b/examples/wifi/iperf/Makefile
@@ -6,5 +6,6 @@
 PROJECT_NAME := iperf
 
 EXTRA_COMPONENT_DIRS := $(IDF_PATH)/examples/system/console/advanced/components
+EXTRA_COMPONENT_DIRS += $(IDF_PATH)/examples/common_components/iperf
 
 include $(IDF_PATH)/make/project.mk
