build system: fix cxx init_priority not working on S3

--- a/components/esp32s3/ld/esp32s3.project.ld.in
+++ b/components/esp32s3/ld/esp32s3.project.ld.in
@@ -327,7 +327,7 @@ SECTIONS
     /* C++ constructor and destructor tables */
     /* Don't include anything from crtbegin.o or crtend.o, as IDF doesn't use toolchain crt */
     __init_array_start = ABSOLUTE(.);
-    KEEP (*(EXCLUDE_FILE (*crtend.* *crtbegin.*) .ctors .ctors.*))
+    KEEP (*(EXCLUDE_FILE (*crtend.* *crtbegin.*) .ctors SORT(.ctors.*)))
     __init_array_end = ABSOLUTE(.);
     KEEP (*crtbegin.*(.dtors))
     KEEP (*(EXCLUDE_FILE (*crtend.*) .dtors))
