--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,7 @@
 [submodule "components/openthread/lib"]
 	path = components/openthread/lib
 	url = ../../espressif/esp-thread-lib.git
+
+[submodule "components/ieee802154/lib"]
+	path = components/ieee802154/lib
+	url = ../../espressif/esp-ieee802154-lib.git
