console: re-use the available REPL console API and improve linenoise
Console example doesn't duplicate code in `console` component.
Linenoise has been improved: it now has a parametrized command line
length. It is now possible to paste data efficiently to the console.
Note: this can only be done if the cursor is at the end of the line.

Closes https://github.com/espressif/esp-idf/issues/7057

--- a/examples/system/console/basic/Makefile
+++ b/examples/system/console/basic/Makefile
@@ -3,7 +3,7 @@
 # project subdirectory.
 #
 
-PROJECT_NAME := iperf
+PROJECT_NAME := console
 
 EXTRA_COMPONENT_DIRS := $(IDF_PATH)/examples/system/console/advanced/components
 
