--- a/components/esp32s2/CMakeLists.txt
+++ b/components/esp32s2/CMakeLists.txt
@@ -9,8 +9,7 @@ if(NOT BOOTLOADER_BUILD)
     set(legacy_reqs driver efuse soc)
 endif()
 
-idf_component_register(INCLUDE_DIRS include
-                       REQUIRES xtensa "${legacy_reqs}"
+idf_component_register(REQUIRES xtensa "${legacy_reqs}"
                        REQUIRED_IDF_TARGETS esp32s2)
 
 target_linker_script(${COMPONENT_LIB} INTERFACE "ld/esp32s2.peripherals.ld")
