--- a/examples/cxx/experimental/experimental_cpp_component/host_test/gpio/CMakeLists.txt
+++ b/examples/cxx/experimental/experimental_cpp_component/host_test/gpio/CMakeLists.txt
@@ -4,6 +4,12 @@ include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 set(COMPONENTS main)
 
 idf_build_set_property(COMPILE_DEFINITIONS "-DNO_DEBUG_STORAGE" APPEND)
+
+# Overriding components which should be mocked
 list(APPEND EXTRA_COMPONENT_DIRS "$ENV{IDF_PATH}/mocks/driver/")
+list(APPEND EXTRA_COMPONENT_DIRS "$ENV{IDF_PATH}/mocks/freertos/")
+
+# Including experimental component here because it's outside IDF's main component directory
 list(APPEND EXTRA_COMPONENT_DIRS "$ENV{IDF_PATH}/examples/cxx/experimental/experimental_cpp_component/")
+
 project(test_gpio_cxx_host)
