ci: Adds eFuse host test for ESP32-H2 chip

--- a/.gitlab/ci/host-test.yml
+++ b/.gitlab/ci/host-test.yml
@@ -196,61 +196,49 @@ test_idf_tools:
     - cd ${IDF_PATH}/tools
     - python3 ./idf_tools.py install-python-env
 
-test_esp32_efuse_table_on_host:
+.test_efuse_table_on_host_template:
   extends: .host_test_template
+  variables:
+    IDF_TARGET: "esp32"
   artifacts:
     when: on_failure
     paths:
-      - components/efuse/esp32/esp_efuse_table.c
+      - components/efuse/${IDF_TARGET}/esp_efuse_table.c
     expire_in: 1 week
   script:
     - cd ${IDF_PATH}/components/efuse/
-    - ./efuse_table_gen.py ${IDF_PATH}/components/efuse/esp32/esp_efuse_table.csv
-    - git diff --exit-code -- esp32/esp_efuse_table.c || { echo 'Differences found for esp32 target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
+    - ./efuse_table_gen.py -t "${IDF_TARGET}" ${IDF_PATH}/components/efuse/${IDF_TARGET}/esp_efuse_table.csv
+    - git diff --exit-code -- ${IDF_TARGET}/esp_efuse_table.c || { echo 'Differences found for ${IDF_TARGET} target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
     - cd ${IDF_PATH}/components/efuse/test_efuse_host
     - ./efuse_tests.py
 
-test_esp32s2_efuse_table_on_host:
-  extends: .host_test_template
-  artifacts:
-    when: on_failure
-    paths:
-      - components/efuse/esp32s2/esp_efuse_table.c
-    expire_in: 1 week
-  script:
-    - cd ${IDF_PATH}/components/efuse/
-    - ./efuse_table_gen.py -t "esp32s2" ${IDF_PATH}/components/efuse/esp32s2/esp_efuse_table.csv
-    - git diff --exit-code -- esp32s2/esp_efuse_table.c || { echo 'Differences found for esp32s2 target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
-    - cd ${IDF_PATH}/components/efuse/test_efuse_host
-    - ./efuse_tests.py
+test_efuse_table_on_host_esp32:
+  extends: .test_efuse_table_on_host_template
 
-test_esp32s3_efuse_table_on_host:
-  extends: .host_test_template
-  artifacts:
-    when: on_failure
-    paths:
-      - components/efuse/esp32s3/esp_efuse_table.c
-    expire_in: 1 week
-  script:
-    - cd ${IDF_PATH}/components/efuse/
-    - ./efuse_table_gen.py -t "esp32s3" ${IDF_PATH}/components/efuse/esp32s3/esp_efuse_table.csv
-    - git diff --exit-code -- esp32s3/esp_efuse_table.c || { echo 'Differences found for esp32s3 target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
-    - cd ${IDF_PATH}/components/efuse/test_efuse_host
-    - ./efuse_tests.py
+test_efuse_table_on_host_esp32s2:
+  extends: .test_efuse_table_on_host_template
+  variables:
+    IDF_TARGET: esp32s2
 
-test_esp32c3_efuse_table_on_host:
-  extends: .host_test_template
-  artifacts:
-    when: on_failure
-    paths:
-      - components/efuse/esp32c3/esp_efuse_table.c
-    expire_in: 1 week
-  script:
-    - cd ${IDF_PATH}/components/efuse/
-    - ./efuse_table_gen.py -t "esp32c3" ${IDF_PATH}/components/efuse/esp32c3/esp_efuse_table.csv
-    - git diff --exit-code -- esp32c3/esp_efuse_table.c || { echo 'Differences found for esp32c3 target. Please run make efuse_common_table or idf.py efuse_common_table and commit the changes.'; exit 1; }
-    - cd ${IDF_PATH}/components/efuse/test_efuse_host
-    - ./efuse_tests.py
+test_efuse_table_on_host_esp32s2:
+  extends: .test_efuse_table_on_host_template
+  variables:
+    IDF_TARGET: esp32s2
+
+test_efuse_table_on_host_esp32s3:
+  extends: .test_efuse_table_on_host_template
+  variables:
+    IDF_TARGET: esp32s3
+
+test_efuse_table_on_host_esp32c3:
+  extends: .test_efuse_table_on_host_template
+  variables:
+    IDF_TARGET: esp32c3
+
+test_efuse_table_on_host_esp32h2:
+  extends: .test_efuse_table_on_host_template
+  variables:
+    IDF_TARGET: esp32h2
 
 test_espcoredump:
   extends: .host_test_template
