ci: run host tests when tools.json is updated

--- a/.gitlab/ci/rules.yml
+++ b/.gitlab/ci/rules.yml
@@ -109,6 +109,7 @@
   - "tools/idf_size.py"
   - "tools/test_idf_size/**/*"
 
+  - "tools/tools.json"
   - "tools/tools_schema.json"
   - "tools/idf_tools.py"
   - "tools/test_idf_tools/**/*"
