--- a/components/driver/CMakeLists.txt
+++ b/components/driver/CMakeLists.txt
@@ -58,6 +58,7 @@ if(${target} STREQUAL "esp32s3")
                      "sdmmc_host.c"
                      "sdmmc_transaction.c"
                      "mcpwm.c"
+                     "usb_serial_jtag.c"
                      "spi_slave_hd.c"
                      "touch_sensor_common.c")
 endif()
