make: Fix COMPONENT_OWNBUILDTARGET
Add build system test to match

Partial fix for https://github.com/espressif/esp-idf/issues/3664

--- a/.gitlab/ci/rules.yml
+++ b/.gitlab/ci/rules.yml
@@ -42,6 +42,7 @@
   - "tools/cmake/**/*"
   - "tools/kconfig_new/**/*"
   - "tools/tools.json"
+  - "tools/ci/test_build_system*.sh"
 
 .patterns-custom_test: &patterns-custom_test
   - "components/espcoredump/**/*"
