MCPWM/sync: expose API for configuring timer sync
removed example: mcpwm_basic_config

Closes https://github.com/espressif/esp-idf/issues/5429

Co-authored-by: wubowen <wubowen@espressif.com>

--- a/examples/peripherals/mcpwm/mcpwm_sync_example/Makefile
+++ b/examples/peripherals/mcpwm/mcpwm_sync_example/Makefile
@@ -3,6 +3,6 @@
 # project subdirectory.
 #
 
-PROJECT_NAME := mcpwm_basic_config
+PROJECT_NAME := mcpwm_sync_example
 
 include $(IDF_PATH)/make/project.mk
