--- a/components/esp32s3/Kconfig
+++ b/components/esp32s3/Kconfig
@@ -246,6 +246,9 @@ menu "ESP32S3-Specific"
             help
                 Select the speed for the SPI RAM chip.
 
+            config SPIRAM_SPEED_120M
+                depends on SPIRAM_MODE_QUAD
+                bool "120MHz clock speed"
             config SPIRAM_SPEED_80M
                 bool "80MHz clock speed"
             config SPIRAM_SPEED_40M
