--- a/.gitlab/ci/rules.yml
+++ b/.gitlab/ci/rules.yml
@@ -3,7 +3,10 @@
 ############
 .patterns-c-files: &patterns-c-files
   - ".gitlab/ci/static-code-analysis.yml"
+
   - "tools/ci/static-analysis-rules.yml"
+  - "tools/ci/clang_tidy_dirs.txt"
+
   - "**/*.{c,C}"
   - "**/*.{h,H}"
   - "components/**/Kconfig"
