--- a/components/lwip/Kconfig
+++ b/components/lwip/Kconfig
@@ -373,13 +373,22 @@ menu "LWIP"
 
     config LWIP_IPV6_RDNSS_MAX_DNS_SERVERS
         int "Use IPv6 Router Advertisement Recursive DNS Server Option"
-        depends on LWIP_IPV6
+        depends on LWIP_IPV6_AUTOCONFIG
         default 0
         help
             Use IPv6 Router Advertisement Recursive DNS Server Option (as per RFC 6106) to
             copy a defined maximum number of DNS servers to the DNS module.
             Set this option to a number of desired DNS servers advertised in the RA protocol.
             This feature is disabled when set to 0.
+
+    config LWIP_IPV6_DHCP6
+        bool "Enable DHCPv6 stateless address autoconfiguration"
+        depends on LWIP_IPV6_AUTOCONFIG
+        default n
+        help
+            Enable DHCPv6 for IPv6 stateless address autoconfiguration.
+            Note that the dhcpv6 client has to be started using dhcp6_enable_stateless(netif);
+            Note that the stateful address autoconfiguration is not supported.
 
     config LWIP_NETIF_STATUS_CALLBACK
         bool "Enable status callback for network interfaces"
