ci(sonarqube): update file pattern
according to https://docs.sonarqube.org/7.6/project-administration/narrowing-the-focus/

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,13 +7,13 @@ sonar.sourceEncoding=UTF-8
 
 # exclude list for sonarqube
 # Here're some examples: (relative with the idf_path)
-# test/**
+# test/**/*
 # test/*/*.c
 sonar.exclusion=\
   components/freertos/*.c,\
   components/freertos/include/freertos/*.h,\
-  components/wpa_supplicant/src/**,\
-  components/wpa_supplicant/include/**
+  components/wpa_supplicant/src/**/*,\
+  components/wpa_supplicant/include/**/*
 
 sonar.inclusions=\
   **/*.c,**/*.cpp,**/*.h,**/*.hpp,\
